--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,8 +1,36 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout android:layout_width="1000dp"
+    android:layout_height="1000dp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+
+<fragment
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.retrofit.network.myapplication.MapsActivity" />
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    tools:context="com.retrofit.network.myapplication.MapsActivity"
+
+    />
+
+    <ToggleButton
+        android:id="@+id/toggleButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/map"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="38dp"
+        android:layout_toEndOf="@+id/map"
+        android:text="ToggleButton" />
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/toggleButton2"
+        android:layout_below="@+id/toggleButton2"
+        android:layout_marginTop="106dp"
+        android:text="CheckBox" />
+
+</RelativeLayout>
