--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -33,4 +33,14 @@
         android:layout_marginTop="106dp"
         android:text="CheckBox" />
 
+    <RadioButton
+        android:id="@+id/radioButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/checkBox"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="86dp"
+        android:layout_toEndOf="@+id/map"
+        android:text="RadioButton" />
+
 </RelativeLayout>
